# Hikcam-using-yolov5-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
hikcam/: CMakeLists.txt
hikcam/inc/: hikcam.h
hikcam/src/: hikcam.cpp
jsondeal/: CMakeLists.txt
jsondeal/inc/: jsondeal.h
jsondeal/src/: jsondeal.cpp
src/: CMakeLists.txt  main.cpp
src/hikcam/: CMakeLists.txt  hikcam.cpp  hikcam.h
src/hikcam/inc/: HCNetSDK.h  LinuxPlayM4.h
src/jsondeal/: CMakeLists.txt  jsondeal.cpp
src/utils/: CMakeLists.txt  utils.cpp  utils.h
src/utools/: CMakeLists.txt
src/yolov5/: CMakeLists.txt  yolov5.h
utools/inc/: utools.h
yolov5/: CMakeLists.txt
yolov5/inc/: YoloV5.h
yolov5/src/: YoloV5.cpp  yolov5.cpp
